@@ -5,6 +5,7 @@ import com.group4.shift_service.dto.request.BulkMarkAttendanceRequest;
 import com.group4.shift_service.dto.response.AttendanceReportResponse;
 import com.group4.shift_service.dto.response.AttendanceResponse;
 import com.group4.shift_service.dto.response.DashboardOverviewResponse;
+import com.group4.shift_service.dto.response.StaffAttendanceDetailsResponse;
 import com.group4.shift_service.dto.response.TimelineItemResponse;
 import com.group4.shift_service.entity.Attendance;
 import com.group4.shift_service.entity.Shift;
@@ -54,7 +55,7 @@ public class AttendanceServiceImpl implements AttendanceService {
                 .stream().map(ShiftAssignment::getStaffId).collect(Collectors.toSet());
 
         List<String> requestedStaffIds = request.getAttendances().stream()
-                .map(AttendanceItemRequest::getStaffId).distinct().toList();
+                .map(AttendanceItemRequest::getStaffId).distinct().collect(Collectors.toList());
 
         Map<String, String> staffNameMap = staffRepository.findAllById(requestedStaffIds)
                 .stream().collect(Collectors.toMap(Staff::getId, Staff::getName));
@@ -80,26 +81,21 @@ public class AttendanceServiceImpl implements AttendanceService {
             if (item.getStatus() == AttendanceStatus.PRESENT) {
                 LocalDateTime shiftStart = LocalDateTime.of(shift.getDate(), shift.getStartTime());
                 long diff = Duration.between(shiftStart, now).toMinutes();
-                // diff > 0  → đến sau giờ bắt đầu → trễ
-                // diff <= 0 → đến đúng giờ hoặc sớm (trong window 30p) → PRESENT
                 lateMins     = (int) Math.max(0, diff);
                 actualStatus = lateMins > 0 ? AttendanceStatus.LATE : AttendanceStatus.PRESENT;
-                earlyMins    = 0; // reset early khi check-in lại
-            }
-            else if (item.getStatus() == AttendanceStatus.EARLY_LEAVE) {
+                earlyMins    = 0;
+            } else if (item.getStatus() == AttendanceStatus.EARLY_LEAVE) {
                 LocalDateTime shiftEnd = LocalDateTime.of(shift.getDate(), shift.getEndTime());
                 long diff = Duration.between(now, shiftEnd).toMinutes();
                 earlyMins = (int) Math.max(0, diff);
                 if (earlyMins > 0) {
                     actualStatus = AttendanceStatus.EARLY_LEAVE;
                 } else {
-                    // Check out đúng giờ hoặc sau giờ kết thúc
                     actualStatus = (existing != null && existing.getStatus() == AttendanceStatus.LATE)
                             ? AttendanceStatus.LATE
                             : AttendanceStatus.PRESENT;
                 }
-            }
-            else if (item.getStatus() == AttendanceStatus.ABSENT) {
+            } else if (item.getStatus() == AttendanceStatus.ABSENT) {
                 actualStatus = AttendanceStatus.ABSENT;
                 lateMins  = 0;
                 earlyMins = 0;
@@ -116,10 +112,10 @@ public class AttendanceServiceImpl implements AttendanceService {
                         .shiftId(shiftId).staffId(item.getStaffId()).status(actualStatus)
                         .lateMinutes(lateMins).earlyLeaveMinutes(earlyMins).markedBy(markedBy).build();
             }
-        }).toList();
+        }).collect(Collectors.toList());
 
         return attendanceRepository.saveAll(toSave).stream()
-                .map(a -> toResponse(a, staffNameMap.get(a.getStaffId()))).toList();
+                .map(a -> toResponse(a, staffNameMap.get(a.getStaffId()))).collect(Collectors.toList());
     }
 
     @Override
@@ -133,82 +129,89 @@ public class AttendanceServiceImpl implements AttendanceService {
         if (!shiftRepository.existsById(shiftId)) throw new AppException(ErrorCode.SHIFT_NOT_FOUND);
         List<Attendance> list = attendanceRepository.findAllByShiftId(shiftId);
         Map<String, String> staffNameMap = staffRepository
-                .findAllById(list.stream().map(Attendance::getStaffId).toList())
+                .findAllById(list.stream().map(Attendance::getStaffId).collect(Collectors.toList()))
                 .stream().collect(Collectors.toMap(Staff::getId, Staff::getName));
-        return list.stream().map(a -> toResponse(a, staffNameMap.getOrDefault(a.getStaffId(), "Unknown"))).toList();
+        return list.stream()
+                .map(a -> toResponse(a, staffNameMap.getOrDefault(a.getStaffId(), "Unknown")))
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<AttendanceReportResponse> getAttendanceReport() {
+    public List<AttendanceReportResponse> getAttendanceReport(int month, int year) {
         List<Staff> staffs = staffRepository.findAll();
-        List<Shift> allShifts = shiftRepository.findAll();
+
+        List<Shift> allShifts = shiftRepository.findAll().stream()
+                .filter(s -> s.getDate().getMonthValue() == month && s.getDate().getYear() == year)
+                .collect(Collectors.toList());
+
         List<ShiftAssignment> assignments = shiftAssignmentRepository.findAll();
-        List<Attendance> attendances = attendanceRepository.findAll();
+        List<Attendance> attendances      = attendanceRepository.findAll();
         LocalDateTime now = LocalDateTime.now(ZoneId.of("Asia/Ho_Chi_Minh"));
 
         return staffs.stream().map(staff -> {
-            int totalAssignedMins = 0, penaltyMins = 0;
-            int presentCount = 0, absentCount = 0;
-            int totalLateMins = 0, totalEarlyMins = 0;
-            int validShiftsCount = 0;
+                    int totalAssignedMins = 0, penaltyMins = 0;
+                    int presentCount = 0, absentCount = 0;
+                    int totalLateMins = 0, totalEarlyMins = 0;
+                    int validShiftsCount = 0;
 
-            List<Shift> staffShifts = assignments.stream()
-                    .filter(a -> a.getStaffId().equals(staff.getId()))
-                    .map(a -> allShifts.stream().filter(s -> s.getId().equals(a.getShiftId())).findFirst().orElse(null))
-                    .filter(s -> s != null).toList();
+                    List<Shift> staffShifts = assignments.stream()
+                            .filter(a -> a.getStaffId().equals(staff.getId()))
+                            .map(a -> allShifts.stream().filter(s -> s.getId().equals(a.getShiftId())).findFirst().orElse(null))
+                            .filter(s -> s != null).collect(Collectors.toList());
 
-            for (Shift shift : staffShifts) {
-                LocalDateTime shiftStart = LocalDateTime.of(shift.getDate(), shift.getStartTime());
-                if (!now.isBefore(shiftStart)) {
-                    validShiftsCount++;
-                    int shiftDuration = (int) Duration.between(shift.getStartTime(), shift.getEndTime()).toMinutes();
-                    totalAssignedMins += shiftDuration;
+                    for (Shift shift : staffShifts) {
+                        LocalDateTime shiftStart = LocalDateTime.of(shift.getDate(), shift.getStartTime());
+                        if (!now.isBefore(shiftStart)) {
+                            validShiftsCount++;
+                            int shiftDuration = (int) Duration.between(shift.getStartTime(), shift.getEndTime()).toMinutes();
+                            totalAssignedMins += shiftDuration;
 
-                    Attendance record = attendances.stream()
-                            .filter(a -> a.getShiftId().equals(shift.getId()) && a.getStaffId().equals(staff.getId()))
-                            .findFirst().orElse(null);
+                            Attendance record = attendances.stream()
+                                    .filter(a -> a.getShiftId().equals(shift.getId()) && a.getStaffId().equals(staff.getId()))
+                                    .findFirst().orElse(null);
 
-                    if (record != null) {
-                        if (record.getStatus() == AttendanceStatus.ABSENT) {
-                            absentCount++;
-                            penaltyMins += shiftDuration;
-                        } else {
-                            presentCount++;
-                            int recLateMins  = record.getLateMinutes()       != null ? record.getLateMinutes()       : 0;
-                            int recEarlyMins = record.getEarlyLeaveMinutes() != null ? record.getEarlyLeaveMinutes() : 0;
-                            totalLateMins  += recLateMins;
-                            totalEarlyMins += recEarlyMins;
-                            penaltyMins    += recLateMins + recEarlyMins;
-                        }
-                    } else {
-                        LocalDateTime shiftEnd = LocalDateTime.of(shift.getDate(), shift.getEndTime()).plusMinutes(30);
-                        if (now.isAfter(shiftEnd)) {
-                            absentCount++;
-                            penaltyMins += shiftDuration;
+                            if (record != null) {
+                                if (record.getStatus() == AttendanceStatus.ABSENT) {
+                                    absentCount++;
+                                    penaltyMins += shiftDuration;
+                                } else {
+                                    presentCount++;
+                                    int recLateMins  = record.getLateMinutes()       != null ? record.getLateMinutes()       : 0;
+                                    int recEarlyMins = record.getEarlyLeaveMinutes() != null ? record.getEarlyLeaveMinutes() : 0;
+                                    totalLateMins  += recLateMins;
+                                    totalEarlyMins += recEarlyMins;
+                                    penaltyMins    += recLateMins + recEarlyMins;
+                                }
+                            } else {
+                                LocalDateTime shiftEnd = LocalDateTime.of(shift.getDate(), shift.getEndTime()).plusMinutes(30);
+                                if (now.isAfter(shiftEnd)) {
+                                    absentCount++;
+                                    penaltyMins += shiftDuration;
+                                }
+                            }
                         }
                     }
-                }
-            }
 
-            double coverage = 100.0;
-            if (totalAssignedMins > 0) {
-                int workedMins = Math.max(0, totalAssignedMins - penaltyMins);
-                coverage = Math.round(((double) workedMins / totalAssignedMins) * 100.0);
-            }
+                    double coverage = 0.0;
+                    if (totalAssignedMins > 0) {
+                        int workedMins = Math.max(0, totalAssignedMins - penaltyMins);
+                        coverage = Math.round(((double) workedMins / totalAssignedMins) * 100.0);
+                    }
 
-            return AttendanceReportResponse.builder()
-                    .staffId(staff.getId())
-                    .staffCode(staff.getStaffCode() != null ? staff.getStaffCode() : "N/A")
-                    .staffName(staff.getName())
-                    .assignedShifts(validShiftsCount)
-                    .presentCount(presentCount)
-                    .absentCount(absentCount)
-                    .totalLateMins(totalLateMins)
-                    .totalEarlyMins(totalEarlyMins)
-                    .coveragePercentage(coverage)
-                    .build();
-        }).sorted((a, b) -> Double.compare(b.getCoveragePercentage(), a.getCoveragePercentage())).toList();
+                    return AttendanceReportResponse.builder()
+                            .staffId(staff.getId())
+                            .staffCode(staff.getStaffCode() != null ? staff.getStaffCode() : "N/A")
+                            .staffName(staff.getName())
+                            .assignedShifts(validShiftsCount)
+                            .presentCount(presentCount)
+                            .absentCount(absentCount)
+                            .totalLateMins(totalLateMins)
+                            .totalEarlyMins(totalEarlyMins)
+                            .coveragePercentage(coverage)
+                            .build();
+                }).sorted((a, b) -> Double.compare(b.getCoveragePercentage(), a.getCoveragePercentage()))
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -222,7 +225,7 @@ public class AttendanceServiceImpl implements AttendanceService {
 
         for (Shift shift : shifts) {
             List<ShiftAssignment> assignments = shiftAssignmentRepository.findAllByShiftId(shift.getId());
-            List<Attendance> attendances = attendanceRepository.findAllByShiftId(shift.getId());
+            List<Attendance> attendances      = attendanceRepository.findAllByShiftId(shift.getId());
 
             int shiftAssignedCount = assignments.size();
             totalAssigned += shiftAssignedCount;
@@ -248,8 +251,8 @@ public class AttendanceServiceImpl implements AttendanceService {
                 }
             }
 
-            boolean isFull = (shiftPresentCount == shiftAssignedCount) && (shiftAssignedCount > 0);
-            String timeStr = shift.getStartTime().toString().substring(0, 5) + " - " + shift.getEndTime().toString().substring(0, 5);
+            boolean isFull  = (shiftPresentCount == shiftAssignedCount) && (shiftAssignedCount > 0);
+            String timeStr  = shift.getStartTime().toString().substring(0, 5) + " - " + shift.getEndTime().toString().substring(0, 5);
             String currentStatus = calculateShiftStatus(shift, now);
 
             timeline.add(TimelineItemResponse.builder()
@@ -274,6 +277,62 @@ public class AttendanceServiceImpl implements AttendanceService {
                 .absentStaff(absentCount)
                 .timeline(timeline)
                 .build();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<StaffAttendanceDetailsResponse> getStaffAttendanceHistory(String staffId, Integer month, Integer year, LocalDate exactDate) {
+        List<String> assignedShiftIds = shiftAssignmentRepository.findAll().stream()
+                .filter(a -> a.getStaffId().equals(staffId))
+                .map(ShiftAssignment::getShiftId)
+                .collect(Collectors.toList());
+
+        List<Shift> shifts = shiftRepository.findAllById(assignedShiftIds);
+
+        if (exactDate != null) {
+            shifts = shifts.stream()
+                    .filter(s -> s.getDate().equals(exactDate))
+                    .collect(Collectors.toList());
+        } else if (month != null && year != null) {
+            shifts = shifts.stream()
+                    .filter(s -> s.getDate().getMonthValue() == month && s.getDate().getYear() == year)
+                    .collect(Collectors.toList());
+        }
+
+        Map<String, Attendance> attMap = attendanceRepository.findAll().stream()
+                .filter(a -> a.getStaffId().equals(staffId))
+                .collect(Collectors.toMap(Attendance::getShiftId, a -> a));
+
+        LocalDateTime now = LocalDateTime.now(ZoneId.of("Asia/Ho_Chi_Minh"));
+
+        return shifts.stream().map(shift -> {
+                    Attendance record = attMap.get(shift.getId());
+                    String attStatus = "UNMARKED";
+                    Integer lateMins = 0;
+                    Integer earlyMins = 0;
+
+                    if (record != null) {
+                        attStatus = record.getStatus().name();
+                        lateMins  = record.getLateMinutes() != null ? record.getLateMinutes()       : 0;
+                        earlyMins = record.getEarlyLeaveMinutes() != null ? record.getEarlyLeaveMinutes() : 0;
+                    } else {
+                        LocalDateTime shiftEnd = LocalDateTime.of(shift.getDate(), shift.getEndTime()).plusMinutes(30);
+                        if (now.isAfter(shiftEnd)) attStatus = "ABSENT";
+                    }
+
+                    return StaffAttendanceDetailsResponse.builder()
+                            .shiftId(shift.getId())
+                            .date(shift.getDate())
+                            .startTime(shift.getStartTime())
+                            .endTime(shift.getEndTime())
+                            .branchId(shift.getBranchId())
+                            .shiftStatus(calculateShiftStatus(shift, now))
+                            .attendanceStatus(attStatus)
+                            .lateMinutes(lateMins)
+                            .earlyLeaveMinutes(earlyMins)
+                            .build();
+                }).sorted((a, b) -> b.getDate().compareTo(a.getDate()))
+                .collect(Collectors.toList());
     }
 
     private String calculateShiftStatus(Shift shift, LocalDateTime now) {
